1. Fixed BO newsfeed infinite scroll issue 2. hide side blocks on mobile view

--- a/src/assets/sass/partials/_home.scss
+++ b/src/assets/sass/partials/_home.scss
@@ -334,6 +334,15 @@ $tabs-text-color: $primary-text-color;
 	#home .nav-tabs {
 		padding: 0 !important;
 	}
+	#newBusOpp {
+		display: none;
+	}
+	#latestEvents {
+		display: none;
+	}
+	#newMembers {
+		display: none;
+	}
 }
 
 /*
